# shallow-fake

./: .dockerignore  .env.claudia.metavoice  .gitignore  PRODUCT_SPEC.md  PROGRESS.md  README.md  SECURITY_AUDIT.md  pyproject.toml  requirements.txt  setup.sh
config/: README.md  claudia.yaml  voice1.yaml
docker/: DEBUG_METAVOICE.md  Dockerfile.metavoice  Dockerfile.metavoice.inference  Dockerfile.openvoice_teacher  Dockerfile.piper5080  Dockerfile.piper_export_cpu  Dockerfile.xtts_teacher  docker-compose.metavoice.yml  docker-compose.openvoice.yml  docker-compose.training.yml  docker-compose.xtts.yml
services/: openvoice_teacher_server.py  xtts_teacher_server.py
shallow_fake/: __init__.py  cli.py  config.py  init.py  language_utils.py  status.py  utils.py
tools/: __init__.py  asr_segment.py  build_metadata.py  build_synthetic_dataset.py  combine_datasets.py  download_xtts_model.py  eval_model.py  export_onnx.py  launch_training.py  metavoice_teacher_orchestration.py  migrate_structure.py  monitor_training.py  openvoice_teacher_orchestration.py  reference_audio_utils.py  save_checkpoint_version.py  verify_phonemes.py  xtts_teacher_orchestration.py
